# Parallel_Computing

Cache_coherency/: Makefile
Cache_coherency/reports/: group5_t1_report.docx  group5_t2_report.docx
Cache_coherency/src/counter_4bit/: first_counter_tb.cpp
Cache_coherency/src/task_1/: task_1.cpp
Cache_coherency/src/task_2/: task_2.cpp
LUD_OpenMP/reports/: group5_t4_report.docx  task4_data_plots.xlsx
LUD_OpenMP/src/: CMakeLists.txt  README.txt  lud_opt.cpp  lud_par.cpp  lud_seq.cpp  main.cpp
Password_cracking_CUDA/reports/: group5_t3_report.docx
Password_cracking_CUDA/src/: Makefile  cpumd5.c  cpumd5_3letter  cpumd5_3letter.c  cpumd5_4letter  cpumd5_4letter.c  cpumd5_6letter  cpumd5_6letter.c  md5_3letter  md5_3letter.cu  md5_4letter  md5_4letter.cu  md5_6letter  md5_6letter.cu
